# Kamakura-browser

./: CMakeLists.txt  README.md  kamakura-browser.c  kamakura_browser.glade
.github/workflows/: c-cpp.yml
